# ghh

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon  flake.nix  result
.github/workflows/: build.yml
src/: args.zig  cmd_branch_from_issue.rs  cmd_daily.rs  cmd_epic_analysis.rs  cmd_task_cleanup.rs  config.rs  config.zig  date_serializer.rs  extractor.rs  github.rs  jira.rs  jira.zig  main.rs  main.zig  refs.rs  tests.zig  util.zig
