[package]
name = "ghh"
version = "0.1.0"
authors = ["Milan Aleksic <milanaleksic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde_derive = "1.0.117"
serde = "1.0.117"
regex = "1"
dirs = "3.0.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }

[profile.release]
lto = true
